--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     margin: 0;
     min-height: 100vh;
 }
@@ -41,7 +41,7 @@ header h1{
     text-align: center;
     color: #E9FFF9;
 }
-h1{
+.title{
     /* ¿Cuáles son los deportistas 
     con más medallas olímpicas? */
     display: flex;
@@ -60,26 +60,49 @@ h1{
     /* position: relative;
     height: 20%; */
 }
-/* .table-content{
-    flex-direction: column;
-} */
+.counterAndList{
+    position: relative;
+    margin-left: 70%;
+    margin-right: auto;
+}
+.counterAndList p{ 
+    /* text-align: right; */
+    color: silver;
+}
+.counterAndList select{
+    width: 80%;
+}
+/* .olympicsDropdownList{
 
-table {
-    display: flex;
-    flex-direction: column;
+}
+.counter{
+    text-align: right;
+    color: silver;
+} */
+.tableContent{
+    width: 75%;
     margin: auto;
-    width: 70%;
 }
 
-
 td{
-    display: flex;
-    flex-direction: column;
-    border-bottom: 1px solid #C4C4C4;
-    width: 100%;
-    text-align: left;
+    border-bottom: 1px solid rgb(189, 188, 188);
+    display: inline-flex;
     padding: 2%;
-    font-size: 24px;
+    width: 100%;
+}
+tr:hover {background-color: #f5f5f5;}
+
+.tableLeft{
+    display: inline;
+    margin-left: auto;
+    margin-right: 0;
+}
+.tableTitleLeft{
+    padding-left: 35%;
+    padding-right: 0;
+}
+th{
+    padding: 5%;
 }
 
 footer{
@@ -89,7 +112,7 @@ footer{
     background: rgba(51, 54, 59, 0.82);
 }
 footer p{
-    /* position: relative; */
+    /* position: relative;*/ 
     width: 100%;
     font-family: Oswald;
     font-style: normal;
@@ -98,9 +121,3 @@ footer p{
     text-align: center;
     color: #FFFFFF;
 }
-
-
-/* td {
-    border: 2px solid #8c6b48;
-    width: 300px;
-} */
