--- a/src/style.css
+++ b/src/style.css
@@ -66,9 +66,9 @@ header h1{
     /* line-height: 60px; */
     width: 50%;
 }
-.navegador li a{
+.anchor{
     display: inline-flex;
-    height: 100%;
+    height: 90%;
     width: 100%;
     padding: 0 10%;
     font-family: Oswald;
@@ -80,10 +80,29 @@ header h1{
     text-decoration: none;
     /* text-align: center; */
 }
-header nav a:hover {
+
+.anchor:hover {
     background:#FFFFFF;
     color: #D64045;
-}
+} 
+.DropMenuD{
+    display: flex;
+    flex-direction: column;
+    /* overflow: hidden; */
+    cursor: pointer;
+} 
+.dropdown-content{
+    color: #1D3354;
+    text-decoration: none;
+    font-family: Oswald;
+    font-style: normal;
+    font-weight: normal;
+} 
+/* .DropMenuD:hover .dropdown-content {
+    border: orange;
+    display: flex;
+    flex-direction: column;
+} */
 .title{   
     display: flex;
     width: 80%;
@@ -212,7 +231,7 @@ tr:hover {background-color: #f5f5f5;}
     width: max-content;
 
 }
-button {
+.button {
     cursor: pointer;
     border: 1px inset rgb(0, 0, 0);
     font-size: 13px;
@@ -222,6 +241,36 @@ button {
     background: #D64045;
     box-sizing: border-box;
     border-radius: 18px;
+    width: 5%;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+.depotesdiv{
+    /* border: solid 4px rgb(17, 17, 16); */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;
+    padding: 2%;
+}
+.sportContainer{
+    justify-content: space-between;
+    background-color: #EBE9E9;
+    width: 33.3%;
+    height: 25%;
+    border: solid 20px #FFFDFD;
+}
+.sportTitle{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2em;
+    color: #1D3354;
+    padding: 1%;
+    text-align: center;
+    height: 25%;
+    margin: 5%;
 }
 
 footer{
@@ -321,6 +370,14 @@ div.table-container{
         width: 226px;
         height: 175px;
         padding-right: 3%;
+    }
+
+    .sportContainer{
+        justify-content: space-between;
+        background-color: #EBE9E9;
+        width: 100%;
+        height: 50%;
+        border: solid 2px #FFFDFD;
     }
 
     /* section{
